kubelabs-files-demo/20/demo/manifest/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: in-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  defaultBackend:
    service:
      name: svc-api
      port:
        number: 3000
  rules:
  - host: api.kube1.kubelabs.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-api
            port:
              number: 3000
  - host: api.kube-apps.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-api
            port:
              number: 3000
  tls:
    - hosts:
      - api.kube-apps.tk
      - www.api.kube-apps.tk
      secretName: api-kube-apps-tk-tls
