kubelabs-files-demo/20/demo/manifest/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: in-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  defaultBackend:
    service:
      name: svc-web
      port:
        number: 80
  rules:
  - host: kube1.kubelabs.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-web
            port:
              number: 80
  - host: kube-apps.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-web
            port:
              number: 80
  tls:
  - hosts:
    - kube-apps.tk
    - www.kube-apps.tk
    secretName: kube-apps-tk-tls
